nav displaying offcentre on device fix

--- a/src/Components/CSS/nav.css
+++ b/src/Components/CSS/nav.css
@@ -130,9 +130,6 @@
         display: flex;
         justify-content: space-between;
         margin-top: 0;
-        max-width: 95vw;
-        margin-left: 2.5vw;
-        margin-right: 2.5vw;
     }
 
     #hamburger {
